@@ -42,7 +42,33 @@
 #include "../../variable/reallocation_factor.c"
 
 /**
- * Copies (sets) the array to the part container element.
+ * Gets the array as element from the part container.
+ *
+ * @param p0 the array
+ * @param p1 the part container
+ * @param p2 the operand abstraction
+ * @param p3 the count
+ * @param p4 the array index
+ * @param p5 the part container index
+ * @param p6 the part container element index
+ */
+void copy_part_element_get(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
+
+    log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Copy part element get.");
+
+    // The part container element.
+    void* e = *NULL_POINTER_MEMORY_MODEL;
+
+    // Get part container element.
+    copy_array((void*) &e, p1, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, p6);
+
+    // Get item from part container element.
+    // The count is adjusted automatically.
+    copy_item_element_get(p0, e, p2, p3, p4, p5, (void*) DATA_ITEM_MEMORY_NAME);
+}
+
+/**
+ * Sets the array to the part container as element.
  *
  * @param p0 the part container
  * @param p1 the array
@@ -68,29 +94,26 @@ void copy_part_element_set(void* p0, void* p1, void* p2, void* p3, void* p4, voi
 }
 
 /**
- * Copies (gets) the array from the part container element.
+ * Appends the array to the part container as element.
  *
- * @param p0 the array
- * @param p1 the part container
+ * @param p0 the part container
+ * @param p1 the array
  * @param p2 the operand abstraction
  * @param p3 the count
- * @param p4 the array index
- * @param p5 the part container index
- * @param p6 the part container element index
  */
-void copy_part_element_get(void* p0, void* p1, void* p2, void* p3, void* p4, void* p5, void* p6) {
+void copy_part_element_append(void* p0, void* p1, void* p2, void* p3) {
 
-    log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Copy part element get.");
+    log_terminated_message((void*) DEBUG_LEVEL_LOG_MODEL, (void*) L"Copy part element append.");
 
     // The part container element.
     void* e = *NULL_POINTER_MEMORY_MODEL;
 
     // Get part container element.
-    copy_array((void*) &e, p1, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, p6);
+    copy_array((void*) &e, p0, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) VALUE_PRIMITIVE_MEMORY_NAME, (void*) MODEL_PART_MEMORY_NAME);
 
-    // Get item from part container element.
+    // Set item to part container element.
     // The count is adjusted automatically.
-    copy_item_element_get(p0, e, p2, p3, p4, p5, (void*) DATA_ITEM_MEMORY_NAME);
+    copy_item_element_append(e, p1, p2, p3);
 }
 
 /**
